--- a/manifest.json
+++ b/manifest.json
@@ -43,6 +43,9 @@
 				}
 			}
 		},
+		"resources": {
+		    "css":[{"uri": "css/style.css"}]
+		},
 		"contentDensities": {
 			"compact": false,
 			"cozy": false
