--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,11 @@
 				"settings": {
 					"bundleName": "sap.ui.demo.walkthrough.i18n.i18n"
 				}
-			}
+			},
+	  "invoice": {
+		"type": "sap.ui.model.json.JSONModel",
+		"uri": "Invoices.json"
+	  }
 		},
 		"resources": {
 		    "css":[{"uri": "css/style.css"}]
