Connect OData Service and Mock

--- a/.user.project.json
+++ b/.user.project.json
@@ -15,7 +15,25 @@
         "runnerId": "webapprunner",
         "id": 6245324,
         "displayName": "Run index.html",
-        "lastRunTimeStamp": 1530888454312
+        "lastRunTimeStamp": 1531122688825
+      }
+    },
+    {
+      "filePath": "/test/mockServer.html",
+      "previewMode": 1,
+      "dataMode": 1,
+      "workspace": "withoutWorkspace",
+      "ui5ActiveVersion": null,
+      "ui5VerSource": null,
+      "isDefaultVersion": 0,
+      "urlParameters": [],
+      "hashParameter": "",
+      "backendSystem": [],
+      "_metadata": {
+        "runnerId": "webapprunner",
+        "id": 8038320,
+        "displayName": "Run mockServer.html",
+        "lastRunTimeStamp": 1531122616141
       }
     }
   ]
