--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,13 @@
 		"i18n": "i18n/i18n.properties",
 		"title": "{{appTitle}}",
 		"description": "{{appDescription}}",
-		"applicationVersion": {
-			"version": "1.0.0"
+		"applicationVersion": {"version": "1.0.0"},
+		"dataSources":{
+		    "invoiceRemote":{
+		        "uri": "/destinations/northwind/V2/Northwind/Northwind.svc/",
+		        "type": "OData",
+		        "settings":{"odataVersion": "2.0"}
+		    }
 		}
 	},
 	"sap.ui": {
@@ -43,8 +48,7 @@
 				}
 			},
 	  "invoice": {
-		"type": "sap.ui.model.json.JSONModel",
-		"uri": "Invoices.json"
+	      "dataSource": "invoiceRemote"
 	  }
 		},
 		"resources": {
