--- a/.user.project.json
+++ b/.user.project.json
@@ -1,6 +1,24 @@
 {
   "run": [
     {
+      "filePath": "/test/unit/unitTests.qunit.html",
+      "previewMode": 1,
+      "dataMode": 1,
+      "workspace": "withoutWorkspace",
+      "ui5ActiveVersion": null,
+      "ui5VerSource": null,
+      "isDefaultVersion": 0,
+      "urlParameters": [],
+      "hashParameter": "",
+      "backendSystem": [],
+      "_metadata": {
+        "runnerId": "webapprunner",
+        "id": 7805661,
+        "displayName": "Run unitTests.qunit.html",
+        "lastRunTimeStamp": 1531128717184
+      }
+    },
+    {
       "filePath": "/index.html",
       "previewMode": 1,
       "dataMode": 1,
@@ -15,7 +33,7 @@
         "runnerId": "webapprunner",
         "id": 6245324,
         "displayName": "Run index.html",
-        "lastRunTimeStamp": 1531122688825
+        "lastRunTimeStamp": 1531126871218
       }
     },
     {
