add backbutton to detailview

--- a/manifest.json
+++ b/manifest.json
@@ -71,7 +71,7 @@
 				"name": "overview",
 				"target": "overview"
 			}, {
-				"pattern": "detail",
+				"pattern": "detail/{invoicePath}",
 				"name": "detail",
 				"target": "detail"
 			}],
